Version 1.5.0 [WIP]
-------------------------------------------------------------------------
FEATURES

* Using tries as a data structure (see https://github.com/Ironholds/triebeard), we've increased the speed of suffix_extract() (instead of taking twenty seconds to process a million domains, it now takes..one.)

Version 1.4.0
-------------------------------------------------------------------------

BUG FIXES
* Full NA support is now available!

DEVELOPMENT
* A substantial (20%) speed increase is now available thanks to internal
refactoring.

Version 1.3.3
-------------------------------------------------------------------------

BUG FIXES
* url_parse no longer lower-cases URLs (case sensitivity is Important) thanks to GitHub user 17843

DOCUMENTATION
* A note on NAs (as reported by Alex Pinto) added to the vignette
* Mention Bob Rudis's 'punycode' package.

Version 1.3.2
-------------------------------------------------------------------------

BUG FIXES
* Fixed a critical bug impacting URLs with colons in the path

Version 1.3.1
-------------------------------------------------------------------------

CHANGES
* suffix_refresh has been removed, since LazyData's parameters prevented it from functioning; thanks to
  Alex Pinto for the initial bug report and Hadley Wickham for confirming the possible solutions.

BUG FIXES
* the parser was not properly handling ports; thanks to a report from Rich FitzJohn, this is now fixed.

Version 1.3.0
-------------------------------------------------------------------------

NEW FEATURES
* param_set() for inserting or modifying key/value pairs in URL query strings.
* param_remove() added for stripping key/value pairs out of URL query strings.

CHANGES
* url_parameters has been renamed param_get() under the new naming scheme - url_parameters still exists, however,
for the purpose of backwards-compatibiltiy.

BUG FIXES
* Fixed a bug reported by Alex Pinto whereby URLs with parameters but no paths would not have their domain